# arc_library

./: .gitignore  README.md  requirements.txt  setup.cfg
arcs/: arc16.py  arc19.py  arc3.py  main.py
playground/hello_world/nfts/: immutable_nft.py  mutable_nft.py
playground/hello_world/nfts/arcs/: arc19.py  arc3.py
