[metadata]
name = ARCs
author = Stéphane BARROSO
version = 0.1
[options]
install_requires =
    beaker-pyteal==0.6.1
    cffi==1.15.1
    docstring-parser==0.14.1
    msgpack==1.0.5
    py-algorand-sdk==2.0.0
    pycparser==2.21
    pycryptodomex==3.17
    PyNaCl==1.5.0
    pyteal==0.23.0
    semantic-version==2.10.0
